# CMake-Ep048

./: .gitignore  CMakeLists.txt  README.adoc
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: AddCatch2.cmake  AddCxxOpts.cmake  AddCxxOptsCPM.cmake  AddFmt.cmake  AddFmtCPM.cmake  AddGitSubmodule.cmake  AddJsonParser.cmake  AddJsonParserCPM.cmake  AddSpdLog.cmake  AddSpdLogCPM.cmake  Docs.cmake  LTO.cmake  Sanitizers.cmake  Warning.cmake
configure/: config.hpp.in
docs/: Doxyfile
my_lib/: CMakeLists.txt
my_lib/include/: my_lib.hpp
my_lib/src/: my_lib.cpp
tests/: CMakeLists.txt  main.cc
